--- a/2024.md
+++ b/2024.md
@@ -16,6 +16,6 @@ please do! there is an issue open where anyone can drop a recommended a resource
 | Title               | Link                           | Tags                  | Summary                                            | Credit        |
 |---------------------|--------------------------------|-----------------------|----------------------------------------------------|---------------|
 | Large Language Model Agents     | [Link](https://llmagents-learning.org/f24)     | AI, Free Course | LLM Agents seem to be pushing the state of the art towards techniques that seemingly shore up some of the deficiencies inherent to LLMs. In this course, you will learn theory and practice to critically assess, design and implement agents.             | Berkeley Center for Responsible, Decentralized Intelligence (RDI) |
-| 10 ways to be prepared and grounded now that Trump has won     | [Link](https://wagingnonviolence.org/2024/11/10-things-to-do-if-trump-wins/)     | Design, Resilience  |   Authoritarian power is derived from fear of repression, isolation from each other and exhaustion at the utter chaos. This post outlines a series of strategic principles to preserve resilience in the face of large-scale distrust, threats of violence and uncertainty.  | Waging Nonviolence, People Powered News and Analysis |
-| Example Title 3     | [Link](http://example.com)     | Ecosystem, Innovation | Summary that gives insight into the main points.    | Author/Source |
+| 10 ways to be prepared and grounded now that Trump has won     | [Link](https://wagingnonviolence.org/2024/11/10-things-to-do-if-trump-wins/)     | Movements, Resilience  |   Authoritarian power is derived from fear of repression, isolation from each other and exhaustion at the utter chaos. This post outlines a series of strategic principles to preserve resilience in the face of large-scale distrust, threats of violence and uncertainty.  | Waging Nonviolence, People Powered News and Analysis |
+| “The cure lies within us, if we have the will and the imagination to develop it”     | [Link](https://www.niemanlab.org/2018/09/chaplin/ )     | Systems Thinking, Journalism | The internet-driven attention economy has disrupted traditional journalism and contributed to widespread misinformation, polarization, and distrust. A shift toward a "journalism of resilience," where the industry adapts to withstand crises while prioritizing a more robust, rhizomic news model that resists manipulation and fosters collective well-being.    | Nieman Labs |
 | Example Title 4     | [Link](http://example.com)     | Informal, Structures  | Key highlights or takeaways of the article.         | Author/Source |
