update: add goldman sachs report

--- a/2024.md
+++ b/2024.md
@@ -6,6 +6,7 @@
 - tech tools for good
 - community engagement
 - zen buddhism
+- content creators and economics
 
 ### Can I recommend things for you to check out?
 
@@ -18,4 +19,6 @@ please do! there is an issue open where anyone can drop a recommended a resource
 | Large Language Model Agents     | [Link](https://llmagents-learning.org/f24)     | AI, Free Course | LLM Agents seem to be pushing the state of the art towards techniques that seemingly shore up some of the deficiencies inherent to LLMs. In this course, you will learn theory and practice to critically assess, design and implement agents.             | Berkeley Center for Responsible, Decentralized Intelligence (RDI) |
 | 10 ways to be prepared and grounded now that Trump has won     | [Link](https://wagingnonviolence.org/2024/11/10-things-to-do-if-trump-wins/)     | Movements, Resilience  |   Authoritarian power is derived from fear of repression, isolation from each other and exhaustion at the utter chaos. This post outlines a series of strategic principles to preserve resilience in the face of large-scale distrust, threats of violence and uncertainty.  | Waging Nonviolence, People Powered News and Analysis |
 | “The cure lies within us, if we have the will and the imagination to develop it”     | [Link](https://www.niemanlab.org/2018/09/chaplin/ )     | Systems Thinking, Journalism | The internet-driven attention economy has disrupted traditional journalism and contributed to widespread misinformation, polarization, and distrust. A shift toward a "journalism of resilience," where the industry adapts to withstand crises while prioritizing a more robust, rhizomic news model that resists manipulation and fosters collective well-being.    | Nieman Labs |
-| Example Title 4     | [Link](http://example.com)     | Informal, Structures  | Key highlights or takeaways of the article.         | Author/Source |
+| The Creator Economy Could Approach Half-a-trillion Dollars by 2027     | [Link](https://archive.ph/cpP7M)     | Content Creators  | The creator economy is growing due to increased digital media consumption and new technologies that ease content creation, with projections suggesting it could nearly double to $480 billion by 2027. This growth is fueled by influencer marketing, platform payouts, and short-form video monetization, although only 4% of creators currently earn over $100,000 annually.         | Goldman Sachs |
+| Example Title 4     | [Link](https://archive.ph/cpP7M)     | Informal, Structures  | Key highlights or takeaways of the article.         | Author/Source |
+
