update: add on tyranny

--- a/2024.md
+++ b/2024.md
@@ -20,5 +20,7 @@ please do! there is an issue open where anyone can drop a recommended a resource
 | 10 ways to be prepared and grounded now that Trump has won     | [Link](https://wagingnonviolence.org/2024/11/10-things-to-do-if-trump-wins/)     | Movements, Resilience  |   Authoritarian power is derived from fear of repression, isolation from each other and exhaustion at the utter chaos. This post outlines a series of strategic principles to preserve resilience in the face of large-scale distrust, threats of violence and uncertainty.  | Waging Nonviolence, People Powered News and Analysis |
 | “The cure lies within us, if we have the will and the imagination to develop it”     | [Link](https://www.niemanlab.org/2018/09/chaplin/ )     | Systems Thinking, Journalism | The internet-driven attention economy has disrupted traditional journalism and contributed to widespread misinformation, polarization, and distrust. A shift toward a "journalism of resilience," where the industry adapts to withstand crises while prioritizing a more robust, rhizomic news model that resists manipulation and fosters collective well-being.    | Nieman Labs |
 | The Creator Economy Could Approach Half-a-trillion Dollars by 2027     | [Link](https://archive.ph/cpP7M)     | Content Creators  | The creator economy is growing due to increased digital media consumption and new technologies that ease content creation, with projections suggesting it could nearly double to $480 billion by 2027. This growth is fueled by influencer marketing, platform payouts, and short-form video monetization, although only 4% of creators currently earn over $100,000 annually.         | Goldman Sachs |
+| On Tyranny - A Video Series     | [Link](https://www.youtube.com/watch?v=9tocssf3w80&list=PLhZxrogyToZsllfRqQllyuFNbT-ER7TAu&index=1&pp=iAQB)     | Demcoracy, Movements  | Timothy Synder is a historian who wrote an influential book called "On Tyranny" with 20 lessons to fight against authoritarianism. In this video series, he talks through each of the lessons and delves into them.         | Timothy Snyder |
 | Example Title 4     | [Link](https://archive.ph/cpP7M)     | Informal, Structures  | Key highlights or takeaways of the article.         | Author/Source |
+
 
