feat: add to be sorted section and first entry

--- a/2024.md
+++ b/2024.md
@@ -24,4 +24,9 @@ please do! there is an issue open where anyone can drop a recommended a resource
 | Universities in Dark Times: Beyond the Plague of Neoliberal Fascism     | [Link](https://www.counterpunch.org/2024/11/04/universities-in-dark-times-beyond-the-plague-of-neoliberal-fascism/)     | Education, Democracy  | Universities as institutions intended to uphold democractic values and foster civic education are under assault by "neoliberal fascism," a new manifestation of market-driven policis combined with authoritarian ideologies.         | Counter Punch |
 | Example Title 4     | [Link](https://archive.ph/cpP7M)     | Informal, Structures  | Key highlights or takeaways of the article.         | Author/Source |
 
+# To Be Sorted
+
+1. https://martinfowler.com/articles/mocksArentStubs.html?ref=learn.codesee.io
+2. 
+
 
