--- a/2024.md
+++ b/2024.md
@@ -22,7 +22,7 @@ please do! there is an issue open where anyone can drop a recommended a resource
 | The Creator Economy Could Approach Half-a-trillion Dollars by 2027     | [Link](https://archive.ph/cpP7M)     | Content Creators  | The creator economy is growing due to increased digital media consumption and new technologies that ease content creation, with projections suggesting it could nearly double to $480 billion by 2027. This growth is fueled by influencer marketing, platform payouts, and short-form video monetization, although only 4% of creators currently earn over $100,000 annually.         | Goldman Sachs |
 | On Tyranny - A Video Series     | [Link](https://www.youtube.com/watch?v=9tocssf3w80&list=PLhZxrogyToZsllfRqQllyuFNbT-ER7TAu&index=1&pp=iAQB)     | Democracy, Movements  | Timothy Synder is a historian who wrote an influential book called "On Tyranny" with 20 lessons to fight against authoritarianism. In this video series, he talks through each of the lessons and delves into them.         | Timothy Snyder |
 | Universities in Dark Times: Beyond the Plague of Neoliberal Fascism     | [Link](https://www.counterpunch.org/2024/11/04/universities-in-dark-times-beyond-the-plague-of-neoliberal-fascism/)     | Education, Democracy  | Universities as institutions intended to uphold democractic values and foster civic education are under assault by "neoliberal fascism," a new manifestation of market-driven policis combined with authoritarian ideologies.         | Counter Punch |
-| Various articles on Test Driven Development and its correlates     | [Link](https://martinfowler.com/articles/mocksArentStubs.html?ref=learn.codesee.io) [Link](https://martinfowler.com/bliki/SelfTestingCode.html) [Link](https://martinfowler.com/bliki/UnitTest.html) [Link](https://martinfowler.com/bliki/IntegrationTest.html)     | Testing, Programming  | The origins of testing in software development can be traced back to at least the 80s, when XP (later Extreme Programming), a flavor of Agile Programming, came into vogue. Since then, the terminology has gotten somewhat muddied: unit and integration tests, mocks, stubs and contract doubles, and self-testing code, have all come to mean to different things to different people in different contexts and points in time. These pieces describe that history and dymystify the terms with an eye towards practicality.      | Martin Fowler |
+| Various articles on Test Driven Development and its correlates     | [Link](https://martinfowler.com/articles/mocksArentStubs.html?ref=learn.codesee.io) [Link](https://martinfowler.com/bliki/SelfTestingCode.html) [Link](https://martinfowler.com/bliki/UnitTest.html) [Link](https://martinfowler.com/bliki/IntegrationTest.html)     | Testing, Programming  | The origins of testing in software development can be traced back to at least the 80s, when XP (later Extreme Programming), came into vogue. Since then, the terminology has gotten somewhat muddied: unit and integration tests, mocks, stubs and contract doubles, and self-testing code, have all come to mean to different things to different people in different contexts and points in time. These pieces describe that history and dymystify the terms with an eye towards practicality.      | Martin Fowler |
 | Example Title 4     | [Link](https://archive.ph/cpP7M)     | Informal, Structures  | Key highlights or takeaways of the article.         | Author/Source |
 
 # To Be Sorted
