--- a/2024.md
+++ b/2024.md
@@ -25,6 +25,9 @@ please do! there is an issue open where anyone can drop a recommended a resource
 | Various articles on Test Driven Development and its correlates     | [Link](https://martinfowler.com/articles/mocksArentStubs.html?ref=learn.codesee.io) [Link](https://martinfowler.com/bliki/SelfTestingCode.html) [Link](https://martinfowler.com/bliki/UnitTest.html) [Link](https://martinfowler.com/bliki/IntegrationTest.html)     | Testing, Programming  | The origins of testing in software development can be traced back to at least the 80s, when XP (later Extreme Programming), came into vogue. Since then, the terminology has gotten somewhat muddied: unit and integration tests, mocks, stubs and contract doubles, and self-testing code, have all come to mean to different things to different people in different contexts and points in time. These pieces describe that history and dymystify the terms with an eye towards practicality.      | Martin Fowler |
 | History of Agile Movement in Programming     | [Link](https://martinfowler.com/articles/newMethodology.html)     | Testing, Programming  | In today's environment, the most common methodology is code and fix. The [Agile Movement](https://agilemanifesto.org/iso/en/manifesto.html) proposed a series of values, principle and practices meant to render software development more adaptive, and to decouple the notion of it being an engineering discipline from pernious analogies to other types of engineering that created unrealistic expectations for how deterministic programming can be. The artcle delves into the history of Agile and it's derivatives, like Extreme Programming, and its implications for management, teams and more.         | Martin Fowler |
 | The Holy Teachings of Vimalakirtti     | [Link](https://www.psupress.org/books/titles/978-0-271-01209-4.html?srsltid=AfmBOorry7gn6TmM8YPyUuTS39dBb5fqOKhEsoMJeQZ3j2MVhAJHctdV)     | Book, Buddhism  | This is one of the most important sutras of Mahayana Buddhism. It contains the primary philosophical ideas of this popular school of Buddhism, as well as some practical advice for how to meditate on key precepts of impermanence, non-self and voidness. The sutra was written around 2,000 years ago.         |  |
+| Just Enough Research     | [Link](https://abookapart.com/products/just-enough-research.html)     | User Research, Design  | Erika Hall breaksdown various kinds of design research that can happen in the for-profit sector. There are overlaps with the non-profit sector as well, but most of the techniques assume an audience in a for-profit entitity. Erika covers organizational research, user and customer resarch, competititve analysis, evaluative research, surveys and more. The book leans largely practical and less theoretical.         | Erika Hall |
+| Buddhist Meditation - Classic Teaching from Tibet     | [Link](https://www.amazon.com/Buddhist-Meditation-Classic-Teachings-Tibet/dp/0143111469)     | Book, Buddhism  | A curated selection of practical advice on meditation spanning multiple centuries. As the author states, "The structur of the book loosely follows what in Tibet are known as 'foundation practices', practice manuals that immerse the reader in the search for compassionate and meaningful responses to the ubiquity of human suffering, and in the comteplative techniques that translate that search into consequential action."          | Kurtis R. Schaeffer |
+| Understanding the Mind     | [Link](https://www.parallax.org/product/understanding-our-mind/)     | Thich Nhat Hanh, Buddhism  | Thich Nhat Hanh consolidate various important Buddhist texts, largely from the "Manifestation Only" school of Vasubhandu in the Avatamsaka Sutra, into a single set of 50 verses that capture a Buddhist theory of mind, framed as a tool for contemplative practice and ultimate liberation.         | Thich Nhat Hanh |
 | Example Title 4     | [Link](https://archive.ph/cpP7M)     | Informal, Structures  | Key highlights or takeaways of the article.         | Author/Source |
 
 # To Be Sorted
